addded youtube video and background

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title>DJ</title>
   </head>
-  <body>
-    Free webhosting with github etim.
+  <body background="http://i.ytimg.com/vi/5mqtc2Z3K8o/maxresdefault.jpg">
+    <p>Free webhosting with github etim.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z-48u_uWMHY" frameborder="0" allowfullscreen></iframe>
   </body>
 </html>
