--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <title>DJ</title>
   </head>
   <body background="http://i.ytimg.com/vi/5mqtc2Z3K8o/maxresdefault.jpg">
-    <p>Free webhosting with github etim.</p>
+    <div style="background-color:white">
+      <p>Free webhosting with github etim.</p>
+      <p>Here's how to do it. <a>http://blog.teamtreehouse.com/using-github-pages-to-host-your-website</a></p>
+    </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Z-48u_uWMHY" frameborder="0" allowfullscreen></iframe>
   </body>
 </html>
