added another link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <body background="http://i.ytimg.com/vi/5mqtc2Z3K8o/maxresdefault.jpg">
     <div style="background-color:white">
       <p>Free webhosting with github etim.</p>
-      <p>Here's how to do it. <a href="http://blog.teamtreehouse.com/using-github-pages-to-host-your-website">http://blog.teamtreehouse.com/using-github-pages-to-host-your-website</a></p>
+      <p>Here's how to do it.</p>
+      <p><a href="http://blog.teamtreehouse.com/using-github-pages-to-host-your-website">http://blog.teamtreehouse.com/using-github-pages-to-host-your-website</a></p>
+      <p>and</p>
+      <p><a href="https://pages.github.com/">https://pages.github.com/</a></p>
     </div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Z-48u_uWMHY" frameborder="0" allowfullscreen></iframe>
   </body>
