using this repo has a testing area for the PAF website

--- a/index.html
+++ b/index.html
@@ -1,15 +1,200 @@
-<html>
-  <head>
-    <title>DJ</title>
-  </head>
-  <body background="http://i.ytimg.com/vi/5mqtc2Z3K8o/maxresdefault.jpg">
-    <div style="background-color:white">
-      <p>Free webhosting with github etim.</p>
-      <p>Here's how to do it.</p>
-      <p><a href="http://blog.teamtreehouse.com/using-github-pages-to-host-your-website">http://blog.teamtreehouse.com/using-github-pages-to-host-your-website</a></p>
-      <p>and</p>
-      <p><a href="https://pages.github.com/">https://pages.github.com/</a></p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Philippino Arts Foundation</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse" style="margin-right: 5px;">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Philippine Art Foundation</a>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#section-about" id="about-anchor" class="anchorLink">About</a>
+                    </li>
+                    <li>
+                        <a href="#section-join" id="join-anchor" class="anchorLink">Join</a>
+                    </li>
+                    <li>
+                        <a href="#section-contact" id="contact-anchor" class="anchorLink">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container">
+
+        <div class="row">
+            <div class="box">
+                <div class="brand">Philippine Art Foundation</div>
+                <div class="address-bar">Traditions Rekindled<br/ >Forming Community and Rediscovering Pride Through the Arts</div>
+
+                <div class="col-lg-12 text-center">
+                    <div id="carousel-example-generic" class="carousel slide">
+                        <ol class="carousel-indicators hidden-xs">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        </ol>
+
+                        <div class="carousel-inner">
+                            <div class="item active">
+                                <img class="img-responsive img-full" src="img/1.jpg" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/2.jpg" alt="">
+                            </div>
+                        </div>
+
+                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                            <span class="icon-prev"></span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                            <span class="icon-next"></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="section-about" class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <!-- <img height='50' src='https://upload.wikimedia.org/wikipedia/commons/5/5a/Sun_Symbol_of_the_National_Flag_of_the_Philippines.svg' /> -->
+                    <h2 class="intro-text text-center"><strong>About Us</strong></h2>
+                    <hr>
+                    <p>The Philippine Art Foundation (PAF) was founded by the late Dr. Leonor ‘Nong’ Feliciano and was incorporated in 1990 as a non-stock, not-for-profit organization dedicated to the development, preservation and promotion of Philippine Art and art forms.</p>
+                    <p>The Foundation strives to fulfill the following objectives - Research, Education and Training, Creativity and Performance – to nurture national and international appreciation for the Filipino cultural heritage through the arts and its history.</p>
+                    <p>PAF is recognized in the St. Louis community and the U.S. as a premier source of information regarding Philippine art and culture.  The Foundation’s Dance Troupe has performed and been invited to return to various international and folklore events around St. Louis and adjacent cities, including programs by the International Institute’s Annual Festival of Nations, and the annual Multi-cultural Revue of the St. Louis County Library.  PAF also had a big participation in the celebration of the 2004 World’s Fair Centennial.</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="section-join" class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"><strong>Become A Member</strong></h2>
+                    <hr>
+                    <p>Be a member and experience the joy of representing our homeland the Philippines!</p>
+                    <p>Through events performances, whether by dance or other art forms, we nurture our appreciation for the Filipino cultural heritage.  Our children learn more about their roots and their history and tradition, they develop friendships among members, and discover the excitement of public performances.</p>
+                    <p>To be a member, we commit to participating in all PAF’s volunteer work and community events programs.</p>
+                    <p>As dance performers, we commit to attending practices regularly to ensure outstanding performance in all events performances.</p>
+                    <!--TODO make this look better, add link to facebook-->
+                    <p><center>Annual membership fee:<br/>Family $35/Individual $20</center></p>
+                    <p><center>Visit our Facebook page<br />PAF – Philippine Art Foundation</center></p>
+                </div>
+            </div>
+        </div>
+
+        <div id="section-contact" class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"><strong>Coordinators</strong></h2>
+                    <hr>
+                    <div class="row">
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" height='283px' src="http://placehold.it/750x450" alt="">
+                            <h3>Bay Grafilo <br /> <small>Choreographer / Dance Director</small></h3>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>Lily Elznic <br/> <small>Overall Coordinator</small></h3>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>Neg Orendain <br /> <small>Treasurer</small></h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>Marisol Sarmiento <br /> <small>Costume Coordinator</small></h3>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>Emy Joson <br /> <small>Welcome Committee</small></h3>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>Joana Grafilo <br /> <small>Technical Coordinator</small></h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>Matt Lindner <br /> <small>Technical Coordinator</small></h3>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>Jude David <br /> <small>Internal Coordinator</small></h3>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                            <h3>June David <br />  <small>Internal Coordinator</small></h3>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Z-48u_uWMHY" frameborder="0" allowfullscreen></iframe>
-  </body>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Philippino Arts Foundation 2016</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    <script>
+    $('.carousel').carousel({
+        interval: 5000 //changes the speed
+    })
+
+    $('a[href^=#section]').on('click', function(event){
+        event.preventDefault();
+        $('html,body').animate({scrollTop:$(this.hash).offset().top}, 500);
+    });
+    </script>
+
+</body>
+
 </html>
