--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Philippino Arts Foundation 2016</p>
+                    <p>Copyright &copy; Philippine Art Foundation 2016</p>
                 </div>
             </div>
         </div>
